--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 </button>
               </div>
               <div class="mermaid-container">
-                  <img src="images/flowchart.png" alt="业务流程图" style="max-width: 100%; height: auto;" />
+                  <img src="images/flowchart_business.png" alt="业务流程图" style="max-width: 100%; height: auto;" />
               </div>
             </div>
           </div>
