--- a/index.html
+++ b/index.html
@@ -544,10 +544,8 @@
                   <i class="fas fa-expand"></i>
                 </button>
               </div>
-              <div class="mermaid-container">
-                  <div class="mermaid">
-                      <img src="images/flowchart_business.png" alt="业务流程图" style="max-width: 100%; height: auto;" />
-                  </div>
+              <img src="images/flowchart_business.png" alt="业务流程图" style="width: 100%; max-width: 1200px; height: auto; cursor: pointer;" id="flowchartImage" />
+              <div class="scale-info" style="text-align: center; margin-top: 10px; color: #64748b;"> 缩放: <span id="scalePercent">100%</span>
               </div>
             </div>
           </div>
